# controllers/role.controller.go
@@ -20,19 +20,6 @@ func NewRoleController(repo repository.RoleRepository) RoleController {
 	}
 }
 
-// UserDetail godoc
-// @Summary      Show User Detail
-// @Security 	 ApiKeyAuth
-// @Description  get User detail
-// @Tags         users
-// @Accept       json
-// @Produce      json
-// @Param        id  path string  true  "user id"
-// @Success      200  {object}  models.User
-// @Failure      400  {object}	utils.ErrorMessage
-// @Failure      404  {object}	utils.ErrorMessage
-// @Failure      500  {object}	utils.ErrorMessage
-// @Router       /user/{id} [get]
 func (uc roleController) AddRole(ctx *gin.Context) {
 	ctx.JSON(501, "Not Implemented")
 }
