# controllers/user.controller.go
@@ -1,9 +1,7 @@
 package controllers
 
 import (
-	"fmt"
 	"net/http"
-	"strconv"
 	"strings"
 
 	"github.com/MortezaHajilouei/golang-web-server/config"
@@ -18,14 +16,11 @@ type userController struct {
 }
 
 type UserController interface {
-	GetUser(*gin.Context)
-	GetMe(*gin.Context)
-	GetAllUser(*gin.Context)
-	SignInUser(*gin.Context)
 	SignUpUser(*gin.Context)
-	//AddUser(enforcer *casbin.Enforcer) gin.HandlerFunc
-	//UpdateUser(*gin.Context)
-	//DeleteUser(*gin.Context)
+	SignUpUserLegal(*gin.Context)
+	SignUpUserAdmin(*gin.Context)
+	SignInUser(*gin.Context)
+	GetMe(*gin.Context)
 }
 
 func NewUserController(repo repository.UserRepository) UserController {
@@ -34,96 +29,28 @@ func NewUserController(repo repository.UserRepository) UserController {
 	}
 }
 
-// UserDetail godoc
-// @Summary      Show User Detail
-// @Security 	 ApiKeyAuth
-// @Description  get User detail
-// @Tags         users
-// @Accept       json
-// @Produce      json
-// @Param        id  path string  true  "user id"
-// @Success      200  {object}  models.User
-// @Failure      400  {object}	utils.ErrorMessage
-// @Failure      404  {object}	utils.ErrorMessage
-// @Failure      500  {object}	utils.ErrorMessage
-// @Router       /user/{id} [get]
-func (uc userController) GetUser(ctx *gin.Context) {
-	id := ctx.Param("id")
-	user, err := uc.userRepo.GetUser(id)
-	if err != nil {
-		ctx.JSON(http.StatusNotFound, gin.H{"status": "failed", "message": "user not found"})
+func (uc userController) AddUserAndResponse(ctx *gin.Context, newUser models.User) {
+	result, err := uc.userRepo.AddUser(newUser)
+	if err != nil && strings.Contains(err.Error(), "duplicated key not allowed") {
+		ctx.JSON(http.StatusConflict, gin.H{"status": "fail", "message": "کاربری با این مشخصات وجود دارد"})
 		return
-	}
-	userResponse := &models.UserResponse{
-		Id:        user.Id,
-		Name:      user.FirstName,
-		Email:     user.Email,
-		CreatedAt: user.CreatedAt,
-		UpdatedAt: user.UpdatedAt,
-	}
-
-	ctx.JSON(http.StatusOK, gin.H{"status": "success", "data": gin.H{"user": userResponse}})
-}
-
-// ProfileDetail godoc
-// @Summary      Show My Profile Detail
-// @Security 	 ApiKeyAuth
-// @Description  get Profile detail
-// @Tags         users
-// @Produce      json
-// @Success      200  {object}  models.User
-// @Failure      500  {object}	utils.ErrorMessage
-// @Router       /user/ [get]
-func (uc userController) GetMe(ctx *gin.Context) {
-	user := ctx.MustGet("currentUser").(models.User)
-	userResponse := &models.UserResponse{
-		Id:        user.Id,
-		Name:      user.FirstName,
-		Email:     user.Email,
-		CreatedAt: user.CreatedAt,
-		UpdatedAt: user.UpdatedAt,
-	}
-
-	ctx.JSON(http.StatusOK, gin.H{"status": "success", "data": gin.H{"user": userResponse}})
-}
-
-// UsersList godoc
-// @Summary      Show Users List
-// @Security 	 ApiKeyAuth
-// @Description  get users list
-// @Param		 info query utils.SearchUser true "Signup"
-// @Tags         users
-// @Accept       json
-// @Produce      json
-// @Success      200  {object}  models.User
-// @Failure      400  {object}	utils.ErrorMessage
-// @Failure      500  {object}	utils.ErrorMessage
-// @Router       /users/ [get]
-func (uc userController) GetAllUser(ctx *gin.Context) {
-	var users []models.User
-
-	users, err := uc.userRepo.GetAllUser(ctx)
-	if err != nil {
-		ctx.AbortWithStatusJSON(http.StatusBadGateway, gin.H{"status": "fail", "message": err.Error()})
+	} else if err != nil {
+		ctx.JSON(http.StatusConflict, gin.H{"status": "fail", "message": err.Error()})
 		return
 	}
 
-	var users_response []models.UserResponse
-
-	for i := 0; i < len(users); i++ {
-		users_response = append(users_response, models.UserResponse{
-			Id:        users[i].Id,
-			Name:      users[i].FirstName,
-			Email:     users[i].Email,
-			CreatedAt: users[i].CreatedAt,
-			UpdatedAt: users[i].UpdatedAt,
-		})
+	userResponse := &models.UserResponse{
+		Id:        result.Id,
+		FirstName: result.FirstName,
+		LastName:  result.LastName,
+		Email:     result.Email,
+		CreatedAt: result.CreatedAt,
+		UpdatedAt: result.UpdatedAt,
 	}
-
-	ctx.JSON(http.StatusOK, gin.H{"status": "success", "data": users})
+	ctx.JSON(http.StatusCreated, gin.H{"status": "success", "data": gin.H{"user": userResponse}})
 }
 
-// Register godoc
+// RegisterUser godoc
 // @Summary      Register new user
 // @Description  signup user
 // @Tags         users
@@ -154,28 +81,116 @@ func (uc userController) SignUpUser(ctx *gin.Context) {
 	}
 
 	newUser := models.User{
-		FirstName: payload.FirstName,
-		LastName:  payload.LastName,
-		Email:     strings.ToLower(payload.Email),
-		Password:  hashedPassword,
+		FirstName:    payload.FirstName,
+		LastName:     payload.LastName,
+		Email:        strings.ToLower(payload.Email),
+		Password:     hashedPassword,
+		Mobile:       payload.Mobile,
+		NationalCode: payload.NationalCode,
+		Telephone:    payload.Telephone,
+		Address:      payload.Address,
+		BirthDay:     payload.BirthDay,
+		IBan:         payload.IBan,
+		BankId:       payload.BankId,
 	}
-	result, err := uc.userRepo.AddUser(newUser)
-	if err != nil && strings.Contains(err.Error(), "duplicated key not allowed") {
-		ctx.JSON(http.StatusConflict, gin.H{"status": "fail", "message": "User with that email already exists"})
-		return
-	} else if err != nil {
-		ctx.JSON(http.StatusConflict, gin.H{"status": "fail", "message": err.Error()})
+	uc.AddUserAndResponse(ctx, newUser)
+}
+
+// RegisterLegalUser godoc
+// @Summary      Register new legal user
+// @Description  signup legal user
+// @Tags         users
+// @Param		 info body models.UserSignUpInputLegal true "Signup"
+// @Accept       json
+// @Produce      json
+// @Success      201  {object}  models.UserResponse
+// @Failure      409  {object}	utils.ErrorMessage
+// @Failure      502  {object}	utils.ErrorMessage
+// @Router       /user/register/legal [post]
+func (uc userController) SignUpUserLegal(ctx *gin.Context) {
+	var payload *models.UserSignUpInputLegal
+
+	if err := ctx.ShouldBindJSON(&payload); err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"status": "fail", "message": err.Error()})
 		return
 	}
 
-	userResponse := &models.UserResponse{
-		Id:        result.Id,
-		Name:      result.FirstName,
-		Email:     result.Email,
-		CreatedAt: result.CreatedAt,
-		UpdatedAt: result.UpdatedAt,
+	if payload.Password != payload.PasswordConfirm {
+		ctx.JSON(http.StatusBadRequest, gin.H{"status": "fail", "message": "Passwords do not match"})
+		return
 	}
-	ctx.JSON(http.StatusCreated, gin.H{"status": "success", "data": gin.H{"user": userResponse}})
+
+	hashedPassword, err := utils.HashPassword(payload.Password)
+	if err != nil {
+		ctx.JSON(http.StatusBadGateway, gin.H{"status": "error", "message": err.Error()})
+		return
+	}
+
+	newUser := models.User{
+		FirstName:       payload.FirstName,
+		LastName:        payload.LastName,
+		Email:           strings.ToLower(payload.Email),
+		Password:        hashedPassword,
+		Mobile:          payload.Mobile,
+		NationalCode:    payload.NationalCode,
+		Telephone:       payload.Telephone,
+		Address:         payload.Address,
+		IBan:            payload.IBan,
+		BankId:          payload.BankId,
+		BirthDay:        payload.BirthDay,
+		IsLegal:         true,
+		ZipCode:         payload.ZipCode,
+		RegistrationNum: payload.RegistrationNum,
+		NationalNum:     payload.NationalNum,
+		EconomyNum:      payload.EconomyNum,
+	}
+	uc.AddUserAndResponse(ctx, newUser)
+}
+
+// RegisterAdminUser godoc
+// @Summary      Register new admin user
+// @Description  signup admin user
+// @Tags         users
+// @Param		 info body models.UserSignUpInputAdmin true "Signup"
+// @Accept       json
+// @Produce      json
+// @Success      201  {object}  models.UserResponse
+// @Failure      409  {object}	utils.ErrorMessage
+// @Failure      502  {object}	utils.ErrorMessage
+// @Router       /user/register/admin [post]
+func (uc userController) SignUpUserAdmin(ctx *gin.Context) {
+	var payload *models.UserSignUpInputAdmin
+
+	if err := ctx.ShouldBindJSON(&payload); err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"status": "fail", "message": err.Error()})
+		return
+	}
+
+	if payload.Password != payload.PasswordConfirm {
+		ctx.JSON(http.StatusBadRequest, gin.H{"status": "fail", "message": "Passwords do not match"})
+		return
+	}
+
+	hashedPassword, err := utils.HashPassword(payload.Password)
+	if err != nil {
+		ctx.JSON(http.StatusBadGateway, gin.H{"status": "error", "message": err.Error()})
+		return
+	}
+
+	newUser := models.User{
+		FirstName:    payload.FirstName,
+		LastName:     payload.LastName,
+		Email:        strings.ToLower(payload.Email),
+		Password:     hashedPassword,
+		Mobile:       payload.Mobile,
+		NationalCode: payload.NationalCode,
+		Telephone:    payload.Telephone,
+		BirthDay:     payload.BirthDay,
+		Address:      payload.Address,
+		IsSuperUser:  true,
+		UserName:     payload.UserName,
+	}
+	uc.AddUserAndResponse(ctx, newUser)
 }
 
 // Login godoc
@@ -218,61 +233,34 @@ func (ac userController) SignInUser(ctx *gin.Context) {
 		return
 	}
 
-	refresh_token, err := utils.CreateToken(config.RefreshTokenExpiresIn, user.Id, config.RefreshTokenPrivateKey)
-	if err != nil {
-		ctx.JSON(http.StatusBadRequest, gin.H{"status": "fail", "message": err.Error()})
-		return
+	resp := gin.H{
+		"access_token": access_token,
+		"expires_in":   config.AccessTokenMaxAge,
+		"isSuperUser":  user.IsSuperUser,
+		"isLegal":      user.IsLegal,
 	}
 
-	ctx.SetCookie("access_token", access_token, config.AccessTokenMaxAge*60, "/", "localhost", false, true)
-	ctx.SetCookie("refresh_token", refresh_token, config.RefreshTokenMaxAge*60, "/", "localhost", false, true)
-	ctx.SetCookie("logged_in", "true", config.AccessTokenMaxAge*60, "/", "localhost", false, false)
-
-	ctx.JSON(http.StatusOK, gin.H{"status": "success", "access_token": access_token})
+	ctx.JSON(http.StatusOK, resp)
 }
 
-func (uc *userController) RefreshAccessToken(ctx *gin.Context) {
-	message := "could not refresh access token"
-
-	cookie, err := ctx.Cookie("refresh_token")
-
-	if err != nil {
-		ctx.AbortWithStatusJSON(http.StatusForbidden, gin.H{"status": "fail", "message": message})
-		return
+// ProfileDetail godoc
+// @Summary      Show My Profile Detail
+// @Security 	 ApiKeyAuth
+// @Description  get Profile detail
+// @Tags         users
+// @Produce      json
+// @Success      200  {object}  models.UserResponse
+// @Failure      500  {object}	utils.ErrorMessage
+// @Router       /user/me/ [get]
+func (uc userController) GetMe(ctx *gin.Context) {
+	user := ctx.MustGet("currentUser").(models.User)
+	userResponse := &models.UserResponse{
+		Id:        user.Id,
+		FirstName: user.FirstName,
+		LastName:  user.LastName,
+		Email:     user.Email,
+		CreatedAt: user.CreatedAt,
+		UpdatedAt: user.UpdatedAt,
 	}
-
-	config := config.Config_
-
-	sub, err := utils.ValidateToken(cookie, config.RefreshTokenPublicKey)
-	if err != nil {
-		ctx.AbortWithStatusJSON(http.StatusForbidden, gin.H{"status": "fail", "message": err.Error()})
-		return
-	}
-	//result := uc.userRepo.DB.First(&user, "id = ?", fmt.Sprint(sub))
-	fmt.Printf("ss: ?", sub)
-	str := strconv.Itoa(1)
-	user, err := uc.userRepo.GetUser(str)
-	if err != nil {
-		ctx.AbortWithStatusJSON(http.StatusForbidden, gin.H{"status": "fail", "message": "the user belonging to this token no logger exists"})
-		return
-	}
-
-	access_token, err := utils.CreateToken(config.AccessTokenExpiresIn, user.Id, config.AccessTokenPrivateKey)
-	if err != nil {
-		ctx.AbortWithStatusJSON(http.StatusForbidden, gin.H{"status": "fail", "message": err.Error()})
-		return
-	}
-
-	ctx.SetCookie("access_token", access_token, config.AccessTokenMaxAge*60, "/", "localhost", false, true)
-	ctx.SetCookie("logged_in", "true", config.AccessTokenMaxAge*60, "/", "localhost", false, false)
-
-	ctx.JSON(http.StatusOK, gin.H{"status": "success", "access_token": access_token})
-}
-
-func (uc *userController) LogoutUser(ctx *gin.Context) {
-	ctx.SetCookie("access_token", "", -1, "/", "localhost", false, true)
-	ctx.SetCookie("refresh_token", "", -1, "/", "localhost", false, true)
-	ctx.SetCookie("logged_in", "", -1, "/", "localhost", false, false)
-
-	ctx.JSON(http.StatusOK, gin.H{"status": "success"})
+	ctx.JSON(http.StatusOK, gin.H{"user": userResponse})
 }
